--- a/index.css
+++ b/index.css
@@ -1,22 +1,53 @@
-body {background-color:rgb(214, 210, 210); width: 100vw; margin: 0; padding:0;}
+body {background-color:rgb(200, 200, 200); width: 100vw; margin: 0; padding:0;}
+img {width: 100%; height: 100%; object-fit: cover;}
 
+/* Header / Navbar */
 
 header {margin: 0; padding: 0;}
-nav {display: flex; position: fixed; justify-content: space-between; top:0; width: 100%; height: 40px; margin: 0;padding: 0; 
+nav {display: flex; position: fixed; justify-content: space-between; z-index: 1; top:0; 
+    width: 100%; height: 40px; margin: 0;padding: 0; 
     background-color:rgba(210, 160, 79, 1);}
 
-#headTitle {display: flex; align-items: center; height: 100%; margin: 0; padding: 0;}
-#headTitle h1 {display: flex; align-items: center; width: 100%; height: 100%;margin: 0; padding: 0 10px 0 10px;
+#headTitle {display: flex; align-items: center; 
+    height: 100%; margin: 0; padding: 0;}
+#headTitle h1 {display: flex; align-items: center; 
+    width: 100%; height: 100%; margin: 0; padding: 0 10px 0 10px;
     background-color:rgba(42,42,42,1);color:rgba(210, 160, 79, 1);}
 
-
-nav ul {display: flex; align-items: center;height: 100% ;margin: 0; padding: 0 10px 0 10px; font-size: 1.2rem;
+nav ul {display: flex; align-items: center; height: 100% ;margin: 0; padding: 0 0px 0 10px; font-size: 1.2rem;
      background-color:transparent;}
 nav ul li {display: flex;  align-items: center; height: 100%; padding: 0 .7rem 0 .7rem;
     list-style-type: none; }
 nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1);}
 
+/* MAIN CONTENT */
+
+#mCon {display: flex; flex-direction: column; position: relative; justify-content:center; top: 40px; 
+    margin: 0; padding: 0 15px 15px 15px; height: auto;}
+#mCon h2 {margin: 15px 15px 25px 15px; padding: 10px; text-align: center; font-size: 32px}
+
+#grid {display: grid; grid-template-columns: 40% 40%; grid-template-rows: 300px 300px; grid-gap: 30px; justify-content:center;}
+
+
+
+.recipe-links {display: flex; justify-content: center; margin: 0; padding: 0; border-style:solid; 
+    border-radius: 1em; border-color: rgba(42,42,42,1); overflow: hidden; box-shadow: 0px 0px 5px 5px rgba(210, 160, 79, 1);}
+.recipe-links:hover > .recipe-info {visibility: visible;}
+
+.recipe-info {display: block; /*visibility: hidden*/; 
+    width: 100%; height: 100%  ;margin: auto; padding: 5px; text-align: center; text-decoration: none;
+    background-color: rgba(42,42,42,.6);color: rgba(200,200,200,1)}
+.recipe-info h3 {margin: 15px 0 0 0; padding: 0; width: 100%;
+    background-color: blue;}
+.recipe-info p {margin: auto; padding: 0; width: 100%; 
+    background-color: white;}
+/* RECIPE INFO */
+#recipe1 {background: no-repeat url("./index-resources/recipe1-cover.jpg"); background-size:cover; background-position:center;}
+#recipe2 {}    
+#recipe3 {}
+#recipe4 {}
+
 
 /*  */
 
-#mCon {position:relative; top: 40px;}
+footer {display: flex; margin: 30px 0 0 0; padding: 15px;}
