--- a/index.css
+++ b/index.css
@@ -14,8 +14,9 @@ nav {display: flex; position: fixed; justify-content: space-between; z-index: 1;
     width: 100%; height: 100%; margin: 0; padding: 0 10px 0 10px;
     background-color:rgba(42,42,42,1);color:rgba(210, 160, 79, 1);}
 
-nav ul {display: flex; align-items: center; height: 100% ;margin: 0; padding: 0 0px 0 10px; font-size: 1.2rem;
-     background-color:transparent;}
+nav ul {display: flex; align-items: center; height: 100% ;
+    margin: 0; padding: 0 0px 0 10px; font-size: 1.2rem;
+    background-color:transparent;}
 nav ul li {display: flex;  align-items: center; height: 100%; padding: 0 .7rem 0 .7rem;
     list-style-type: none; }
 nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1);}
@@ -28,24 +29,25 @@ nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1)
 
 #grid {display: grid; grid-template-columns: 40% 40%; grid-template-rows: 300px 300px; grid-gap: 30px; justify-content:center;}
 
-
-
-.recipe-links {display: flex; justify-content: center; margin: 0; padding: 0; border-style:solid; 
+.recipe-links {display: fl1x; justify-content: center; margin: 0; padding: 0; border-style:solid; 
     border-radius: 1em; border-color: rgba(42,42,42,1); overflow: hidden; box-shadow: 0px 0px 5px 5px rgba(210, 160, 79, 1);}
 .recipe-links:hover > .recipe-info {visibility: visible;}
 
 .recipe-info {display: block; /*visibility: hidden*/; 
-    width: 100%; height: 100%  ;margin: auto; padding: 5px; text-align: center; text-decoration: none;
-    background-color: rgba(42,42,42,.6);color: rgba(200,200,200,1)}
-.recipe-info h3 {margin: 15px 0 0 0; padding: 0; width: 100%;
-    background-color: blue;}
-.recipe-info p {margin: auto; padding: 0; width: 100%; 
-    background-color: white;}
+    width: 100%; height: 100%  ;margin: auto; padding: 5px; text-decoration: none;
+    background-color: rgba(42,42,42,.8);color: rgba(200,200,200,1);}
+.recipe-info h3 {margin: 15px 0 0 0; padding: 0; width: 100%;  text-align: center;
+    color:rgba(200,200,200,1)}
+.recipe-info ul h4{margin: 15px auto 0 auto; padding: 0; width: 70%; 
+    color:rgba(200,200,200,1);}
+.recipe-info p {margin: 5px auto 0 30px; padding: 0; width: 70%; 
+        color:rgba(200,200,200,1);}
+.recipe-info h4 {margin: 15px auto 0 30px; padding: 0; width: 70%}
 /* RECIPE INFO */
 #recipe1 {background: no-repeat url("./index-resources/recipe1-cover.jpg"); background-size:cover; background-position:center;}
-#recipe2 {}    
-#recipe3 {}
-#recipe4 {}
+#recipe2 {margin: 0; padding: 0; width: 100%;}    
+#recipe3 {margin: 0; padding: 0; width: 100%;}
+#recipe4 {margin: 0; padding: 0; width: 100%;}
 
 
 /*  */
