--- a/recipes/SCC/SaCC.css
+++ b/recipes/SCC/SaCC.css
@@ -5,7 +5,6 @@ body {margin: 0; padding: 0;}
 
 /*  */
 header {margin: 0; padding: 0;}
-header img {width: 100%;}
 
 nav {display: flex; position: fixed; justify-content: space-between; z-index: 1; top:0; 
     width: 100%; height: 40px; margin: 0;padding: 0; 
@@ -24,10 +23,28 @@ nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1)
 
 /*  */
 
-main {margin: 0; padding: 0;}
+main {display: flex; flex-direction: column; margin: 0; padding: 0;}
+
+
+main img {width: 100%; margin: 0 0 10px 0; padding: 0;}
+
+#info-container {display: grid; grid-template-columns: 45% 45%; grid-template-rows: auto; grid-gap: 20px; justify-content: center;
+    width: 100%; margin: 0px; padding: 0; }
+
+#ingredients {display: flex; flex-direction: column; 
+    width: 100%;height: 100%; margin: 0; padding: 0; 
+    background-color: rgba(210, 160, 79, 1)}
+#ingredients h3 {margin: 5px; padding: 0px;}
+
+
+
+#instructions {display: flex; flex-direction: column;width: 100%; height: 100%; margin: 0;background-color: aqua;}
+#instructions h3 {margin: 5px; padding: 0px;}
 
 /*  */
-
+@media (max-width: 600px) {
+    #info-container {grid-template-columns: 95%;}
+}
 /*  */
 
 /*  */
