--- a/recipes/recipe4/SaCC.css
+++ b/recipes/recipe4/SaCC.css
@@ -1,19 +1,52 @@
 /*  */
-html {box-sizing: border-box; width: 100vw; height: 100vh; background-color: black;}
+html {box-sizing: border-box; width: 100%; height: 100vh; margin: 0; padding: 0;
+    background-color: rgb(104, 104, 104);}
+body {margin: 0; padding: 0; background-color: rgba(42,42,42,1);}
 
+a {text-decoration:none; color: inherit;}
 
 /*  */
 header {margin: 0; padding: 0;}
 
+nav {display: flex; position: fixed; justify-content: space-between; z-index: 1; top:0;
+    width: 100%; height: 40px; margin: 0;padding: 0;
+    background-color:rgba(210, 160, 79, 1); border-bottom: solid 2px; border-color: rgba(42,42,42,1);}
+#headTitle {display: flex; align-items: center;
+    height: 100%; margin: 0; padding: 0;}
+#headTitle h1 {display: flex; align-items: center;
+    width: 100%; height: 100%; margin: 0; padding: 0 10px 0 10px;
+    background-color:rgba(42,42,42,1);color:rgba(210, 160, 79, 1);}
 
-#navbar {display: flex; position: fixed;  justify-content: center; top: 0; width: 100%; height: 40px; margin: 0; padding: 0;
-    background-color: rgba(225,225,225,1);}
-#navbar h1 {display: flex; justify-content: center; ;margin:0; padding: 0; background-color: rgb(255, 94, 0); width: 100%; height: 100%;}
+nav ul {display: flex; align-items: center; height: 100% ;margin: 0; padding: 0 0px 0 10px; font-size: 1.2rem;
+     background-color:transparent;}
+nav ul li {display: flex;  align-items: center; height: 100%; padding: 0 .7rem 0 .7rem;
+    list-style-type: none;}
+nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1);}
 
 /*  */
 
-/*  */
+main {display: flex; flex-direction: column; margin: 0; padding: 0;}
 
+
+main img {width: 100%; margin: 0 0 10px 0; padding: 0;}
+
+#info-container {display: flex; justify-content: center;
+    width: 100%; margin: 0px; padding: 0; }
+
+#ingredients {width: 43%; margin: 0px 5px 5px 5px;padding: 3px 3px 3px 0px; background-color: rgba(210,160,79,1);border: solid 2px; border-radius: .5rem;}
+#ingredients h3 {margin: 0px 0 0 10px; padding: 0;}
+
+#instructions  {width: 43%; margin: 0px 5px 5px 5px;padding: 3px 3px 3px 0px; background-color: rgba(210,160,79,1);border: solid 2px; border-radius: .5rem;}
+#instructions h3 {margin: 0 0 0 10px; padding: 0;}
+
+/*  */
+@media (max-width: 600px) {
+    body {min-width: 480px}
+    nav {min-width: 480px}
+    #info-container {flex-direction: column;}
+    #ingredients {width: 95%;}
+    #instructions {width: 95%}
+}
 /*  */
 
 /*  */
