--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-html {background-color:rgb(200,200,200); width: 100%; height: 100%;}
-body {display: flex; flex-direction: column; align-items: center; background-color:rgb(200, 200, 200); width: 100%; height: auto; margin: 0; padding:0;}
+html {background-color:rgb(200,200,200); width: 100%; height: 100vh;}
+body {display: flex; flex-direction: column; align-items: center; background-color:rgb(200, 200, 200); width: 100%; height: 100%; margin: 0; padding:0;}
 img {width: 100%; height: 100%; object-fit: cover;}
 
 /* Header / Navbar */
@@ -17,19 +17,19 @@ nav {display: flex; position: fixed; justify-content: space-between; z-index: 1;
     background-color:rgba(42,42,42,1);color:rgba(210, 160, 79, 1);}
 
 nav ul {display: flex; align-items: center; height: 100% ;
-    margin: 0; padding: 0 15px 0 10px; font-size: 1.2rem;
+    margin: 0 -5px 0 0; padding: 0 5px 0 10px; font-size: 1.2rem;
     background-color: transparent;}
 nav ul li {display: flex; align-items: center; height: 100%; padding: 0 .7rem 0 .7rem;
-    list-style-type: none;}
+    list-style-type: none; color: rgba(42,42,42,1)}
 nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1);}
 
 /* MAIN CONTENT */
 
 #mCon {display: flex; flex-direction: column; position: relative; justify-content:center; top: 40px; 
     margin: 0; padding: 0 15px 15px 15px; height: auto; max-width: 1000px;}
-#mCon h2 {margin: 15px 15px 25px 15px; padding: 10px; text-align: center; font-size: 32px; color: inherit;}
+#mCon h2 {margin: 15px 15px 25px 15px; padding: 10px; text-align: center; font-size: 32px; color: rgba(42,42,42,1);}
 
-#grid {display: grid; grid-template-columns: 45% 45%; grid-template-rows: 300px 300px; grid-gap: 30px; justify-content:center;}
+#grid {display: grid; grid-template-columns: 280px 280px 280px 280px; grid-template-rows: 280px 280px 280px 280px; grid-gap: 30px; justify-content:center;}
 
 .recipe-links {display: flex; justify-content: center; margin: 0; padding: 0; border-style:solid; 
     border-radius: 1em; border-color: rgba(42,42,42,1); overflow: hidden; box-shadow: 0px 0px 5px 5px rgba(210, 160, 79, 1);}
@@ -62,7 +62,9 @@ nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1)
 footer {display: flex; margin: 30px 0 0 0; padding: 15px;}
 
 /*  */
-
+@media (max-width: 1220px) {
+    #grid {display: grid; grid-template-columns: 45% 45%; grid-template-rows: 300px 300px; grid-gap: 30px; justify-content:center;}
+}
 @media (max-width: 600px) {
     nav *{font-size: 1rem;}
     body {max-width: 600px;}
