--- a/recipes/recipe4/SaCC.css
+++ b/recipes/recipe4/SaCC.css
@@ -1,16 +1,19 @@
 /*  */
-html {box-sizing: border-box; width: 100%; height: 100vh; margin: 0; padding: 0;
-    background-color: rgb(104, 104, 104);}
-body {margin: 0; padding: 0; background-color: rgba(42,42,42,1);}
+html {display: flex; justify-content: center; box-sizing: border-box; width: 100%; height: auto; margin: 0; padding: 0;
+    background-color:rgb(200,200,200);}
+body {max-width: 1000px; height: 100%; margin: 0; padding: 0; 
+    background-color:rgb(200, 200, 200);}
 
 a {text-decoration:none; color: inherit;}
 
 /*  */
-header {margin: 0; padding: 0;}
+header {display: flex; margin: 0; padding: 0; justify-content: center;}
 
-nav {display: flex; position: fixed; justify-content: space-between; z-index: 1; top:0;
+#info-img {width: 90%; margin: 50px 0 0 0; padding: 0 0 0 0; border: solid 2px; border-radius: 1.5rem;}
+
+nav {display: flex; position: fixed; justify-content: space-between; z-index: 1; top:0; left: 0;
     width: 100%; height: 40px; margin: 0;padding: 0;
-    background-color:rgba(210, 160, 79, 1); border-bottom: solid 2px; border-color: rgba(42,42,42,1);}
+    background-color:rgba(210, 160, 79, 1);}
 #headTitle {display: flex; align-items: center;
     height: 100%; margin: 0; padding: 0;}
 #headTitle h1 {display: flex; align-items: center;
@@ -25,24 +28,24 @@ nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1)
 
 /*  */
 
-main {display: flex; flex-direction: column; margin: 0; padding: 0;}
-
-
-main img {width: 100%; margin: 0 0 10px 0; padding: 0;}
+main {display: flex; flex-direction: column;width: 100%; margin: 0; padding: 0; border-radius: 2px;}
 
 #info-container {display: flex; justify-content: center;
-    width: 100%; margin: 0px; padding: 0; }
+    width: 100%; margin: 30px 0 0 0; padding: 0; border-top: 3px;}
 
-#ingredients {width: 43%; margin: 0px 5px 5px 5px;padding: 3px 3px 3px 0px; background-color: rgba(210,160,79,1);border: solid 2px; border-radius: .5rem;}
+#ingredients {width: 43%; margin: 0px 10px 20px 10px; padding: 3px 3px 3px 0px; 
+    background-color: rgba(210,160,79,1); border: solid 2px; border-radius: .5rem; box-shadow: 0px 0px 5px 5px rgba(42,42,42,.7);}
 #ingredients h3 {margin: 0px 0 0 10px; padding: 0;}
 
-#instructions  {width: 43%; margin: 0px 5px 5px 5px;padding: 3px 3px 3px 0px; background-color: rgba(210,160,79,1);border: solid 2px; border-radius: .5rem;}
+#instructions {width: 43%; margin: 0px 10px 20px 10px; padding: 3px 3px 3px 0px; 
+    background-color: rgba(210,160,79,1); border: solid 2px; border-radius: .5rem; box-shadow: 0px 0px 5px 5px rgba(42,42,42,.7);}
 #instructions h3 {margin: 0 0 0 10px; padding: 0;}
 
 /*  */
+
 @media (max-width: 600px) {
-    body {min-width: 480px}
-    nav {min-width: 480px}
+    body {min-width: 430px}
+    nav {min-width: 430px}
     #info-container {flex-direction: column;}
     #ingredients {width: 95%;}
     #instructions {width: 95%}
