--- a/recipes/SCC/SaCC.css
+++ b/recipes/SCC/SaCC.css
@@ -31,6 +31,7 @@ nav ul li:hover {background-color:rgba(42,42,42,1); color: rgba(210, 160, 79, 1)
 /*  */
 
 main {display: flex; flex-direction: column;width: 100%; margin: 0; padding: 0; border-radius: 2px;border-color: rgba(42,42,42,1);}
+main h2 {text-align: center; margin: 15px 0 0 0; padding: 0;}
 
 #info-container {display: flex; justify-content: center;
     width: 100%; margin: 30px 0 0 0; padding: 0; border-top: 3px;}
