--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
-html {background-color:white; width: 100%; height: 100vh;}
-body {display: flex; flex-direction: column; align-items: center; 
-    background-color:white; width: 100%; height: 100%; margin: 0; padding:0;}
+html {background-color:rgb(200,200,200); width: 100%; height: 100vh;}
+body {display: flex; flex-direction: column; align-items: center; background-color:rgb(200, 200, 200); width: 100%; height: 100%; margin: 0; padding:0;}
 img {width: 100%; height: 100%; object-fit: cover;}
 
 /* Header / Navbar */
