--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ nav ul li a {color: rgba(42,42,42,1); text-decoration: none;}
     margin: 0; padding: 0 15px 15px 15px; height: auto; max-width: 1000px;}
 #mCon h2 {margin: 15px 15px 25px 15px; padding: 10px; text-align: center; font-size: 32px; color: rgba(42,42,42,1);}
 
-#grid {display: grid; grid-template-columns: 280px 280px 280px 280px; grid-template-rows: 280px 280px 280px 280px; grid-gap: 30px; justify-content:center;}
+#grid {display: grid; grid-template-columns: 400px 400px 400px 400px; grid-template-rows: 280px 280px 280px 280px; grid-gap: 30px; justify-content:center;}
 
 .recipe-links {display: flex; justify-content: center; margin: 0; padding: 0; border-style:solid; 
     border-radius: 1em; border-color: rgba(42,42,42,1); overflow: hidden; box-shadow: 0px 0px 5px 5px rgba(210, 160, 79, 1);}
@@ -37,12 +37,12 @@ nav ul li a {color: rgba(42,42,42,1); text-decoration: none;}
 
 .recipe-info {display: block; visibility: hidden; 
     width: 100%; height: 100% ;margin: auto; padding: 5px; text-decoration: none;
-    background-color: rgba(42,42,42,.8);color: rgba(200,200,200,1);}
+    background-color: rgba(42,42,42,.8);color: rgba(200,200,200,1); font-size: 1rem;}
 
 .recipe-info h3 {margin: 15px 0 0 0; padding: 0; width: 100%;  text-align: center;
     color:rgba(200,200,200,1);}
 
-.recipe-info ul h4{margin: 15px auto 0 auto; padding: 0; width: 70%; 
+.recipe-info h4{margin: 15px auto 0 auto; padding: 0; width: 70%; 
     color:rgba(200,200,200,1);}
 
 .recipe-info p {margin: 5px auto 0 30px; padding: 0; width: 70%; 
